--- a/index.html
+++ b/index.html
@@ -3,116 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kontakt - Pametni Sustav</title>
+  <title>Besys - Pametni Sigurnosni Sustavi</title>
   <style>
     body {
       font-family: Arial;
       background: url('smart-3871774_1280.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
+      margin: 0;
+      padding: 0;
       text-align: center;
-      padding: 2rem;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    nav {
+      padding: 1rem;
+      background: rgba(0, 0, 0, 0.6);
     }
-    form {
-      max-width: 500px;
-      margin: auto;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 2rem;
-      border-radius: 10px;
-      animation: fadeIn 1s ease-out;
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin: 0;
     }
-    input, textarea {
-      width: 100%;
-      padding: 0.8rem;
-      margin: 0.5rem 0;
-      border: none;
-      border-radius: 5px;
-    }
-    button {
-      background: #0af;
-      color: #fff;
-      border: none;
-      padding: 0.8rem 1.5rem;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #08c;
-    }
-    #potvrda {
-      display: none;
-      margin-top: 1rem;
-      color: #0f0;
+    nav a {
+      color: #0af;
+      text-decoration: none;
       font-weight: bold;
     }
-    .info-box {
-      max-width: 500px;
-      margin: 2rem auto;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 1rem;
-      border-radius: 10px;
-      font-size: 1.1rem;
+    .hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      padding: 2rem;
+      background: rgba(0, 0, 0, 0.5);
+      animation: fadeIn 1.5s ease-out;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin-bottom: 2rem;
+    }
+    .buttons a {
+      display: inline-block;
+      background: #0af;
+      color: #fff;
+      padding: 0.8rem 1.5rem;
+      margin: 0 1rem;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .buttons a:hover {
+      background: #08c;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
+
   <nav>
-    <ul style="list-style:none; padding:0; display:flex; justify-content:center; gap:2rem; margin-bottom:2rem;">
-      <li><a href="usluge.html" style="color:#0af; text-decoration:none;">Usluge</a></li>
-      <li><a href="index.html" style="color:#0af; text-decoration:none;">Kontakt</a></li>
+    <ul>
+      <li><a href="usluge.html">Usluge</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </nav>
-  
-  
 
-  <h1>Kontaktiraj nas</h1>
-  <p>Pošaljite upit putem obrasca</p>
-
-  <form id="kontaktForma" action="https://formspree.io/f/mgvaqwzq" method="POST">
-    <input type="text" name="name" placeholder="Vaše ime" required>
-    <input type="email" name="email" placeholder="Vaš e-mail" required>
-    <textarea name="message" placeholder="Vaša poruka..." rows="5" required></textarea>
-    <button type="submit">Pošalji</button>
-  </form>
-
-  <div id="potvrda">✅ Poruka je uspješno poslana!</div>
-
-  <div class="info-box">
-    📞 Telefon: <a href="tel:0998255098" style="color:#0af; text-decoration:none;">099 825 5098</a><br>
-    🕒 Radno vrijeme: Ponedjeljak – Petak, 08:00 – 16:00
+  <div class="hero">
+    <h1>Pametni sigurnosni sustavi</h1>
+    <p>Za vaš dom i posao – pouzdano, stručno i diskretno.</p>
+    <div class="buttons">
+      <a href="usluge.html">Pogledaj usluge</a>
+      <a href="kontakt.html">Kontaktiraj nas</a>
+    </div>
   </div>
-
-  <script>
-    const form = document.getElementById('kontaktForma');
-    const potvrda = document.getElementById('potvrda');
-
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      const data = new FormData(form);
-
-      fetch(form.action, {
-        method: form.method,
-        body: data,
-        headers: { 'Accept': 'application/json' }
-      }).then(response => {
-        if (response.ok) {
-          potvrda.textContent = "✅ Poruka je uspješno poslana!";
-          potvrda.style.display = 'block';
-          form.reset();
-        } else {
-          potvrda.textContent = "❌ Došlo je do greške. Pokušajte ponovno.";
-          potvrda.style.display = 'block';
-        }
-      }).catch(() => {
-        potvrda.textContent = "❌ Greška u mreži. Provjerite internet vezu.";
-        potvrda.style.display = 'block';
-      });
-    });
-  </script>
 
 </body>
 </html>
