--- a/o-nama.html
+++ b/o-nama.html
@@ -8,16 +8,16 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Besys - Pametni Sigurnosni Sustavi</title>
+  <title>O nama - Besys</title>
   <style>
     body {
       font-family: Arial;
       background: url('smart-3871774_1280.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
-      margin: 0;
-      padding: 0;
       text-align: center;
+      padding: 0;
+      margin: 0;
     }
     nav {
       padding: 1rem;
@@ -36,36 +36,34 @@
       text-decoration: none;
       font-weight: bold;
     }
-    .hero {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 80vh;
+    .content-box {
+      max-width: 800px;
+      margin: 4rem auto;
+      background: rgba(0, 0, 0, 0.7);
       padding: 2rem;
-      background: rgba(0, 0, 0, 0.5);
-      animation: fadeIn 1.5s ease-out;
+      border-radius: 10px;
+      animation: fadeIn 1.2s ease-out;
     }
-    .hero h1 {
-      font-size: 3rem;
+    .content-box h1 {
+      font-size: 2.5rem;
       margin-bottom: 1rem;
     }
-    .hero p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin-bottom: 2rem;
+    .content-box p {
+      font-size: 1.1rem;
+      line-height: 1.7;
+      margin-bottom: 1rem;
     }
-    .buttons a {
+    .cta a {
       display: inline-block;
       background: #0af;
       color: #fff;
       padding: 0.8rem 1.5rem;
-      margin: 0 1rem;
+      margin-top: 1rem;
       border-radius: 5px;
       text-decoration: none;
       font-weight: bold;
     }
-    .buttons a:hover {
+    .cta a:hover {
       background: #08c;
     }
     @keyframes fadeIn {
@@ -79,16 +77,18 @@
   <nav>
     <ul>
       <li><a href="o-nama.html">O nama</a></li>
+      <li><a href="index.html">Početna</a></li>
       <li><a href="usluge.html">Usluge</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </nav>
 
-  <div class="hero">
-    <h1>Pametni sigurnosni sustavi</h1>
-    <p>Za vaš dom i posao – pouzdano, stručno i diskretno.</p>
-    <div class="buttons">
-      <a href="usluge.html">Pogledaj usluge</a>
+  <div class="content-box">
+    <h1>O nama</h1>
+    <p>Besys je specijalizirana uslužna firma za pametne sigurnosne sustave.</p>
+    <p>Dugogodišnje iskustvo, pouzdanost i profesionalan pristup omogućuju nam da našim klijentima pružimo najvišu razinu zaštite – bilo da se radi o privatnim kućama ili poslovnim prostorima.</p>
+    <p>Svaki projekt započinjemo detaljnim izvidom, a sustave prilagođavamo vašim stvarnim potrebama. Osim montaže i održavanja, pružamo i uslugu postavljanja kućnih mreža – sve na jednom mjestu.</p>
+    <div class="cta">
       <a href="kontakt.html">Kontaktiraj nas</a>
     </div>
   </div>
