--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="hr">
 <head>
+  <meta name="description" content="Besys - Pametni sigurnosni sustavi za vaš dom i posao. Montaža, održavanje, mreže i alarmi.">
+  <meta name="keywords" content="Besys, sigurnosni sustavi, videonadzor, alarm, pametni dom, Hikvision, Ajax, TP-Link, Mikrotik, Paradox">
+  <meta name="author" content="Besys">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kontakt - Pametni Sustav</title>
@@ -113,6 +118,14 @@
       });
     });
   </script>
+
+
+  <a href="https://wa.me/385998255098" target="_blank" title="Pošaljite nam poruku na WhatsApp"
+     style="position: fixed; bottom: 20px; right: 20px; background-color: #25D366; color: white;
+     padding: 12px 16px; border-radius: 50px; text-decoration: none; font-weight: bold; display: flex;
+     align-items: center; gap: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); z-index: 1000;">
+    <span style="font-size: 1.2rem;">💬</span> WhatsApp
+  </a>
 
 </body>
 </html>
