--- a/o-nama.html
+++ b/o-nama.html
@@ -1,14 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="hr">
 <head>
-  <meta name="description" content="Besys - Pametni sigurnosni sustavi za vaš dom i posao. Montaža, održavanje, mreže i alarmi.">
-  <meta name="keywords" content="Besys, sigurnosni sustavi, videonadzor, alarm, pametni dom, Hikvision, Ajax, TP-Link, Mikrotik, Paradox">
-  <meta name="author" content="Besys">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>O nama - Besys</title>
+  <meta name="description" content="Besys - o nama. Profesionalna usluga sigurnosnih sustava i mreža.">
+  <meta name="keywords" content="Besys, o nama, sigurnosni sustavi, videonadzor, alarmi, mreže">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     body {
       font-family: Arial;
@@ -76,9 +75,10 @@
 
   <nav>
     <ul>
-      <li><a href="o-nama.html">O nama</a></li>
       <li><a href="index.html">Početna</a></li>
+      <li><a href="o-nama.html">O nama</a></li>
       <li><a href="usluge.html">Usluge</a></li>
+      <li><a href="sustavi.html">Sustavi</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </nav>
@@ -88,11 +88,11 @@
     <p>Besys je specijalizirana uslužna firma za pametne sigurnosne sustave.</p>
     <p>Dugogodišnje iskustvo, pouzdanost i profesionalan pristup omogućuju nam da našim klijentima pružimo najvišu razinu zaštite – bilo da se radi o privatnim kućama ili poslovnim prostorima.</p>
     <p>Svaki projekt započinjemo detaljnim izvidom, a sustave prilagođavamo vašim stvarnim potrebama. Osim montaže i održavanja, pružamo i uslugu postavljanja kućnih mreža – sve na jednom mjestu.</p>
-    
     <div class="cta">
       <a href="kontakt.html">Kontaktiraj nas</a><br><br>
-      <a href="besys_brosura_klijentima.pdf" download style="margin-top:1rem; display:inline-block;">📄 Preuzmi PDF brošuru</a>
+      <a href="besys_brosura_klijentima.pdf" download>📄 Preuzmi PDF brošuru</a>
     </div>
   </div>
+
 </body>
 </html>
