--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,13 @@
     <input type="email" name="email" placeholder="Vaš e-mail" required>
     <textarea name="message" placeholder="Vaša poruka..." rows="5" required></textarea>
     <button type="submit">Pošalji</button>
-  </form>
+  
+  <label style="display: block; margin-top: 1rem;">
+    <input type="checkbox" required>
+    Slažem se s <a href="privatnost.html" target="_blank">politikom privatnosti</a>.
+  </label>
+
+</form>
 
   <div id="potvrda">✅ Poruka je uspješno poslana!</div>
 
