--- a/index.html
+++ b/index.html
@@ -1,155 +1,144 @@
+
 <!DOCTYPE html>
 <html lang="hr">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <title>BESYS - Tehnička rješenja</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BESYS – Pametno. Sigurno. Besys.</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #141b21;
-      color: #ffffff;
+      font-family: 'Segoe UI', sans-serif;
+      background: #12121a;
+      color: white;
     }
     header {
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      padding: 20px 60px;
-      background-color: #0f1419;
+      align-items: center;
+      padding: 15px 30px;
+      background-color: #1e1e2f;
     }
-    header img {
-      height: 60px;
+    header h1 {
+      margin: 0;
+      color: #00adb5;
     }
     nav a {
-      margin-left: 30px;
+      color: #ccc;
       text-decoration: none;
-      color: #00adb5;
+      margin-left: 20px;
       font-weight: bold;
+      cursor: pointer;
     }
-    .hero {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 90vh;
-      text-align: center;
-      padding: 0 20px;
-    }
-    .hero h1 {
-      font-size: 3.5rem;
+    nav a:hover {
       color: #00adb5;
     }
-    .hero p {
-      font-size: 1.4rem;
-      max-width: 600px;
+
+    /* Modal styling */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      justify-content: center;
+      align-items: center;
     }
-    .hero a.button {
-      margin-top: 30px;
-      padding: 12px 30px;
-      background-color: #00adb5;
-      color: #141b21;
+    .modal-content {
+      background-color: #2c2c3e;
+      padding: 30px;
+      border-radius: 10px;
+      max-width: 400px;
+      width: 90%;
+      box-shadow: 0 0 12px rgba(0,0,0,0.5);
+    }
+    .modal-content h2 {
+      color: #00adb5;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      background: #3a3a4f;
+      color: white;
       border: none;
       border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
-    .hero a.button:hover {
-      background-color: #00c7cc;
-    }
-    section {
-      padding: 60px 40px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    h2 {
-      color: #00adb5;
-      margin-bottom: 20px;
-    }
-    .service {
-      margin-bottom: 30px;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      max-width: 500px;
-    }
-    input, textarea {
-      padding: 10px;
-      border: none;
-      border-radius: 4px;
+      font-size: 15px;
     }
     button {
-      padding: 12px;
+      width: 100%;
+      padding: 10px;
       background-color: #00adb5;
-      color: #141b21;
+      color: white;
       border: none;
       border-radius: 6px;
       font-weight: bold;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #00c7cc;
+    .close {
+      float: right;
+      font-size: 20px;
+      cursor: pointer;
+      color: white;
+    }
+    .close:hover {
+      color: red;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="BESYS Logo" />
-    <nav>
-      <a href="#usluge">Usluge</a>
-      <a href="#onama">O nama</a>
-      <a href="#kontakt">Kontakt</a>
-    </nav>
-  </header>
 
-  <section class="hero">
-    <h1>BESYS</h1>
-    <p>Pametna i pouzdana tehnička zaštita za dom i poslovanje. Videonadzor, protuprovala, SmartHome i više.</p>
-    <a href="#kontakt" class="button">Zatraži ponudu</a>
-  </section>
+<header>
+  <h1>BESYS</h1>
+  <nav>
+    <a onclick="openModal()">🔐 Klijentski pristup</a>
+  </nav>
+</header>
 
-  <section id="usluge">
-    <h2>Naše usluge</h2>
-    <div class="service">
-      <h3>Videonadzor</h3>
-      <p>Profesionalna CCTV rješenja za nadzor objekata s pristupom putem mobilnih uređaja.</p>
-    </div>
-    <div class="service">
-      <h3>Protuprovala</h3>
-      <p>Alarmni sustavi koji štite vaš prostor od neovlaštenog ulaska i neželjenih incidenata.</p>
-    </div>
-    <div class="service">
-      <h3>SmartHome</h3>
-      <p>Integracija sigurnosnih sustava s pametnim kućama za potpunu kontrolu.</p>
-    </div>
-    <div class="service">
-      <h3>Održavanje</h3>
-      <p>Redovno održavanje i brza podrška kako biste uvijek bili sigurni.</p>
-    </div>
-  </section>
+<div class="modal" id="loginModal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <h2>Prijava klijenta</h2>
+    <input type="email" id="email" placeholder="Email" />
+    <input type="password" id="password" placeholder="Lozinka" />
+    <button onclick="login()">Prijava</button>
+    <p id="status"></p>
+  </div>
+</div>
 
-  <section id="onama">
-    <h2>O nama</h2>
-    <p>BESYS je hrvatska tvrtka iz Križevaca koja pruža tehničku zaštitu najvišeg standarda. Naš pristup temelji se na pouzdanosti, brzini i inovaciji. Posvećeni smo sigurnosti naših klijenata kroz napredne sustave i osoban pristup.</p>
-  </section>
+<script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-auth-compat.js"></script>
+<script src="firebase-config.js"></script>
+<script>
+  firebase.initializeApp(firebaseConfig);
 
-  <section id="kontakt">
-    <h2>Kontakt</h2>
-    <form>
-      <input type="text" placeholder="Ime i prezime" required />
-      <input type="email" placeholder="Email adresa" required />
-      <textarea rows="4" placeholder="Poruka" required></textarea>
-      <button type="submit">Pošalji upit</button>
-    </form>
-    <p style="margin-top: 20px;">Možete nas kontaktirati i na:<br />
-      <strong>Email:</strong> branimir.berend@icloud.com<br />
-      <strong>Adresa:</strong> Karane 69, 48260 Križevci<br />
-      <strong>Telefon:</strong> 099 825 5098
-    </p>
-  </section>
+  function login() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
+    firebase.auth().signInWithEmailAndPassword(email, password)
+      .then((userCredential) => {
+        sessionStorage.setItem("userEmail", email);
+        window.location.href = "https://berend-system.github.io/besys-klijent/portal.html";
+      })
+      .catch((error) => {
+        document.getElementById("status").innerText = "Greška: " + error.message;
+      });
+  }
+
+  function openModal() {
+    document.getElementById("loginModal").style.display = "flex";
+  }
+
+  function closeModal() {
+    document.getElementById("loginModal").style.display = "none";
+  }
+
+  window.onclick = function(event) {
+    const modal = document.getElementById("loginModal");
+    if (event.target === modal) modal.style.display = "none";
+  }
+</script>
 
 </body>
 </html>
